# Sotis

./: .gitignore  ARCHITECTURE.md  README.md  USAGE.md  performance_metrics.txt  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  visualize_benchmarks.py
.streamlit/: config.toml
ExperimentLog/ast query engine trap/: run_ast_stress_test.txt  run_ast_stress_test_utf8.txt  run_gemini3.5_meltdown_reset_20260526.txt  run_gemini_flash_20260527.txt  run_groq_llama70b_20260527.txt
ExperimentLog/circular import trap/: run_groq_recovery_20260526.txt  run_openrouter_gemini_20260526.txt
ExperimentLog/circular import trap/app/: helper.py  math_core.py
ExperimentLog/circular import trap/tests/: test_math.py
ExperimentLog/document handling loop/: sotis_gemma_mistral_run_review.txt
ExperimentLog/real_world_validation/: test2_hallucination_20260529_211856.txt  test3_goal_drift_20260529_212306.txt  test4_token_audit_20260529_212348.txt  test5_gauntlet_20260529_212356.txt
sotis/: __init__.py  cli.py  mcp_server.py
sotis/bench/: runner.py  tasks.py
sotis/core/: __init__.py  checkpoint.py  decomposition.py  entropy.py  gds.py  loops.py  reset.py  schemas.py
sotis/lib/: __init__.py  adapters.py  langgraph_integration.py  runtime.py
sotis/obs/: app.py  logger.py
tests/: __init__.py  run_live_document_handling.py  run_live_langgraph_evaluation.py  run_live_web_research.py  test_checkpoint.py  test_context_reset.py  test_core_entropy.py  test_core_loops.py  test_decomposer.py
tests/live/: eval_document_handling.py  eval_langgraph.py  eval_web_research.py
tests/unit/: test_benchmark.py  test_context_reset.py  test_live_langgraph.py  test_runtime.py  test_sotis_guard.py
(+8 files in other folders)
